--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -1,18 +1,19 @@
 <center>Admin|Login</center>
-
 {% if name %}
-    <h1>Hello {{ name }}
+    <!-- <h1>Hello {{ name }} -->
+        <!-- <h1>hello</h1>     -->
+    hello {{ name }}
 {% else %}
 <div class="shadow p-3 mb-5 bg-body rounded">
     <form method="POST">
         {{ form.hidden_tag() }}
         {{ form.admin_username.label(class="form-label") }}
         {{ form.admin_username(class="form-control")}}<!-- String input field name-->
-    </br></br>
+     </br></br>
         {{ form.password.label(class="form-label") }}
         {{ form.password(class="form-control")}}
     </br></br>
         {{ form.submit(class="btn btn-dark") }}<!-- Submit button -->
-    </form>
+     </form>
 </div>
-{% endif %}
+{% endif %}  
