--- a/templates/updatevenue.html
+++ b/templates/updatevenue.html
@@ -1,13 +1,6 @@
 {% extends 'baseadmin.html' %}
 
 {% block content %} 
-{% for message in get_flashed_messages() %}
-    <div class="alert alert-success alert-dismissible fade show" role="alert">
-        <strong>{{message}}</strong>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-{% endfor %}
-
 {% if name %}
   <!-- <h1>Hello</h1> -->
   <table class="table">
@@ -30,32 +23,32 @@
         <td>{{ venue.location }}</td>
         <td>{{ venue.Capacity }}</td>
         <td>{{ venue.date_added }}</td>
-        <td><a href="{{ url_for('updatevenue',id=venue.id) }}"><button type="button" class="btn btn-info">Edit</button></a></td>
-        <td><a href="{{ url_for('deletevenue',id=venue.id) }}"><button type="button" class="btn btn-danger">Delete</button></a></td>
-      </tr>
+        <td><a href="{{ url_for('updatevenue') }}"><button type="button" class="btn btn-info">Edit</button></a></td>
+        <td><!--<a href="{{ url_for('deletevenue',id=venue.id) }}"></a>--><button type="button" class="btn btn-danger">Delete</button></td>
+      </tr> 
       {% endfor %}
     </tbody>
   </table>
  
 {% else %}
-  <h1>ADD A VENUE:</h1>
+  <h1>Update venue:</h1>
 <div class="card" style="text-align: center; width: 400px;">
   <div class="card-body">
   
   <div class="shadow p-3 mb-5 bg-body rounded">
-    <form method="POST">
+    <form action="/update/{{ venue_to_update.id }}" method="POST">
         {{ form.hidden_tag() }}
         {{ form.name.label(class="form-label") }}
-        {{ form.name(class="form-control")}}<!-- String input field name-->
+        {{ form.name(class="form-control", value=venue_to_update.name)}}<!-- String input field name-->
       </br></br>
         {{ form.place.label(class="form-label") }}
-        {{ form.place(class="form-control")}}<!-- String input for place-->
+        {{ form.place(class="form-control",value=venue_to_update.place)}}<!-- String input field name-->
       </br></br>
         {{ form.location.label(class="form-label") }}
-        {{ form.location(class="form-control")}}<!-- String input for location-->
+        {{ form.location(class="form-control",value=venue_to_update.location)}}<!-- String input field name-->
       </br></br>
         {{ form.capacity.label(class="form-label") }}
-        {{ form.capacity(class="form-control")}}<!-- Integer input for Capacity-->
+        {{ form.capacity(class="form-control", value=venue_to_update.Capacity)}}<!-- String input field name-->
       </br></br>
       {{ form.submit(class="btn btn-dark") }}
 </form>
