--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,7 +10,7 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/addvenue">Add Venue</a>
+          <a class="nav-link" href="{{ url_for('addvenue') }}">Add Venue</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
