login for user and admin

--- a/templates/baseuser.html
+++ b/templates/baseuser.html
@@ -13,7 +13,7 @@
     <title>flasker</title>
   </head>
   <body>
-    {% include 'admin_navbar.html' %}
+    {% include 'user_navbar.html' %}
     <br/>
     <div class="container">
     {% block content %}
