--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -5,16 +5,12 @@
 
 <center>Admin|Login</center>
 {% for message in get_flashed_messages() %}
-
-<div class="container">
-<div class="alert alert-danger" role="alert" aria-label="Close">
-  <strong>{{ message }}</strong>
-</div>
-</div>
-{% endfor %}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <strong>{{message}}</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+{% endfor %}    
 {% if name %}
-    <!-- <h1>Hello {{ name }} -->
-        <!-- <h1>hello</h1>     -->
     hello {{ name }}
 {% else %}
 <div class="shadow p-3 mb-5 bg-body rounded">
@@ -30,8 +26,5 @@
      </form>
 </div>
 {% endif %}  
-
-
-
 
 {% endblock %}
