--- a/templates/admin_navbar.html
+++ b/templates/admin_navbar.html
@@ -13,7 +13,7 @@
           <a class="nav-link" href="{{ url_for('addvenue') }}">Add Venue</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+          <a class="nav-link" href="{{ url_for('admin_logout') }}">Logout</a>
         </li>
         <right>
               </ul>
