--- a/templates/admin_navbar.html
+++ b/templates/admin_navbar.html
@@ -13,6 +13,12 @@
           <a class="nav-link" href="{{ url_for('addvenue') }}">Add Venue</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('viewvenue') }}">View Venue</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('viewshows') }}">View Shows</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{{ url_for('admin_logout') }}">Logout</a>
         </li>
         <right>
