view and show relation improved and scrollable html in viewVenue added

--- a/templates/admin_navbar.html
+++ b/templates/admin_navbar.html
@@ -18,15 +18,13 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('viewshows') }}">View Shows</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('admin_logout') }}">Logout</a>
+      </ul>
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item" >
+          <a class="nav-link" href="{{ url_for('user_logout') }}">Logout</a>
         </li>
-        <right>
-              </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      <right>
+    </ul>
     </div>
   </div>
 </nav>
