--- a/templates/addvenue.html
+++ b/templates/addvenue.html
@@ -41,28 +41,28 @@
  
 {% else %}
   <h1>ADD A VENUE:</h1>
-<div class="card" style="text-align: center; width: 400px;">
+<!-- <div class="card" style="text-align: center; width: 400px;">
   <div class="card-body">
   
-  <div class="shadow p-3 mb-5 bg-body rounded">
+  <div class="shadow p-3 mb-5 bg-body rounded"> -->
     <form method="POST">
         {{ form.hidden_tag() }}
         {{ form.name.label(class="form-label") }}
         {{ form.name(class="form-control")}}<!-- String input field name-->
-      </br></br>
+      </br>
         {{ form.place.label(class="form-label") }}
         {{ form.place(class="form-control")}}<!-- String input for place-->
-      </br></br>
+      </br>
         {{ form.location.label(class="form-label") }}
         {{ form.location(class="form-control")}}<!-- String input for location-->
-      </br></br>
+      </br>
         {{ form.capacity.label(class="form-label") }}
         {{ form.capacity(class="form-control")}}<!-- Integer input for Capacity-->
-      </br></br>
+      </br>
       {{ form.submit(class="btn btn-dark") }}
 </form>
-  </div>
-</div>
+  <!-- </div>
+</div> -->
 
 {% endif %}
 
