--- a/templates/displayAllShows.html
+++ b/templates/displayAllShows.html
@@ -19,6 +19,7 @@
         <th scope="col">timing</th>
         <th scope="col">tags</th> 
         <th scope="col">ticket_price</th> 
+        <th scope="col">available_seats</th> 
       </tr>
     </thead>
     <tbody>
@@ -31,6 +32,7 @@
         <td>{{ show.show_timing }}</td>
         <td>{{ show.tags }}</td>
         <td>{{ show.ticket_price }}</td>
+        <td>{{ show.available_seats }}</td>
         <td><a href="{{ url_for('updateshow',id=show.id) }}"><button type="button" class="btn btn-info">Edit</button></a></td>
         <td><a href="{{ url_for('deleteshow',id=show.id) }}"><button type="button" class="btn btn-danger">Delete</button></a></td>
       </tr>
@@ -40,31 +42,34 @@
  
 {% else %}
   <h1>Add a show:</h1>
-<div class="card" style="text-align: center; width: 400px;">
-  <div class="card-body">
+<!-- <div class="card" style="text-align: center; width: 400px;">
+  <div class="card-body"> -->
   
   <div class="shadow p-3 mb-5 bg-body rounded">
     <form method="POST">    
         {{ form.hidden_tag() }}
         {{ form.show_name.label(class="form-label") }}
         {{ form.show_name(class="form-control")}}<!-- String input field name-->
-      </br></br>
+      </br>
         {{ form.rating.label(class="form-label") }}
         {{ form.rating(class="form-control")}}
-      </br></br>
+      </br>
         {{ form.tags.label(class="form-label") }}
         {{ form.tags(class="form-control")}}
-      </br></br>
+      </br>
         {{ form.timing.label(class="form-label") }}
         {{ form.timing(class="form-control")}}
-      </br></br>
+      </br>
         {{ form.ticket_price.label(class="form-label") }}
         {{ form.ticket_price(class="form-control")}}
+    </br>
+        {{ form.available_seats.label(class="form-label") }}
+        {{ form.available_seats(class="form-control")}}
     </br></br>
       {{ form.submit(class="btn btn-dark") }}
 </form>
-  </div>
-</div>
+  <!-- </div>
+</div> -->
 
 {% endif %}
 
