--- a/templates/updateshow.html
+++ b/templates/updateshow.html
@@ -10,7 +10,8 @@
         <th scope="col">Show Name</th>
         <th scope="col">Rating</th>
         <th scope="col">tags</th> 
-        <th scope="col">ticket_price</th> 
+        <th scope="col">ticket_price</th>  
+        <th scope="col">available_seats</th>  
       </tr>
     </thead>
     <tbody>
@@ -23,6 +24,7 @@
         <td>{{ show.show_timing }}</td>
         <td>{{ show.tags }}</td>
         <td>{{ show.ticket_price }}</td>
+        <td>{{ show.available_seats }}</td>
         <td><a href="{{ url_for('updateshow',id=show.id) }}"><button type="button" class="btn btn-info">Edit</button></a></td>
         <td><a href="{{ url_for('deleteshow',id=show.id) }}"><button type="button" class="btn btn-danger">Delete</button></a></td>
       </tr> 
@@ -32,30 +34,35 @@
  
 {% else %}
   <h1>Update Show:</h1>
-<div class="card" style="text-align: center; width: 400px;">
+<!-- <div class="card" style="text-align: center; width: 400px;">
   <div class="card-body">
   
-  <div class="shadow p-3 mb-5 bg-body rounded">
+  <div class="shadow p-3 mb-5 bg-body rounded"> -->
     <form action="{{ url_for('updateshow',id=show_to_update.id) }}" method="POST">
         {{ form.hidden_tag() }}
         {{ form.show_name.label(class="form-label") }}
         {{ form.show_name(class="form-control", value = show_to_update.name) }}<!-- String input field name-->
-      </br></br>
+      </br>
         {{ form.rating.label(class="form-label") }}
         {{ form.rating(class="form-control",value = show_to_update.rating) }}
-      </br></br>
+      </br>
         {{ form.tags.label(class="form-label") }}
         {{ form.tags(class="form-control", value = show_to_update.tags)}}
-      </br></br>
+      </br>
         {{ form.timing.label(class="form-label") }}
         {{ form.timing(class="form-control", value = show_to_update.show_timing) }}
-      </br></br>
+      </br>
         {{ form.ticket_price.label(class="form-label") }}
         {{ form.ticket_price(class="form-control",value = show_to_update.ticket_price) }}
+      </br>
+        {{ form.available_seats.label(class="form-label") }}
+        {{ form.available_seats(class="form-control",value = show_to_update.available_seats) }}
+    </br>
         {{ form.submit(class="btn btn-dark") }}
-</form>
+        
+<!-- </form>
   </div>
-</div>
+</div> -->
 
 {% endif %}
 
