--- a/templates/user_navbar.html
+++ b/templates/user_navbar.html
@@ -4,6 +4,9 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('booking',venue_id=1,show_id=1) }}">Booking</a>
+      </li>
       <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item" >
