--- a/templates/user_navbar.html
+++ b/templates/user_navbar.html
@@ -1,19 +1,32 @@
-<nav class="navbar navbar-expand-lg  bg-body-tertiary", style='background-color: black;'>
+  <nav class="navbar navbar-expand-lg bg-body-dark" style='background-color: black;'>
     <div class="container-fluid">
-      <a class="navbar-brand" href="{{ url_for('home') }}">Goodsoup</a>
+      <a class="navbar-brand" href="{{ url_for('home')}}">Goodsoup</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('booking',venue_id=1,show_id=1) }}">Booking</a>
-      </li>
-      <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{ url_for('user_dashboard')}}">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('booking',venue_id=1,show_id=5) }}">Booking</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('user_history') }}">Profile</a>
+          </li>
+        </ul>
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <form method="POST" action="{{ url_for('search') }}" class="d-flex" role="search">
+            {{ form.hidden_tag() }}
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="searched">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
           <li class="nav-item" >
             <a class="nav-link" href="{{ url_for('user_logout') }}">Logout</a>
           </li>
           <right>
-      </ul>
-      <!-- </div> -->
+        </ul>
+      </div>
     </div>
   </nav>
