--- a/templates/admin_navbar.html
+++ b/templates/admin_navbar.html
@@ -18,10 +18,13 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('viewshows') }}">View Shows</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('user_bookings') }}">User Bookings</a>
+        </li>
       </ul>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item" >
-          <a class="nav-link" href="{{ url_for('user_logout') }}">Logout</a>
+          <a class="nav-link" href="{{ url_for('admin_logout') }}">Logout</a>
         </li>
       <right>
     </ul>
