finished my  work done

--- a/templates/baseuser.html
+++ b/templates/baseuser.html
@@ -10,7 +10,7 @@
 
     <!-- <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet"> -->
 
-    <title>flasker</title>
+    <title>flasker-user</title>
   </head>
   <body>
     {% include 'user_navbar.html' %}
