--- a/templates/admin-user_bookings.html
+++ b/templates/admin-user_bookings.html
@@ -12,7 +12,8 @@
       <tr>
         <th scope="col">u_id</th>
         <th scope="col">show_id</th>
-        <th scope="col">rating</th>
+        <th scope="col">venue_id</th>
+        <th scope="col">Average Rating</th>
       </tr>
     </thead>
     <tbody>
@@ -20,10 +21,8 @@
       <tr>
         <td>{{ show.u_id }}</td>
         <td>{{ show.show_id }}</td>
+        <td>{{ show.venue_id }}</td>
         <td>{{ show.rating }}</td>
-        
-        <!-- <td><a href="{{ url_for('updateshow',id=show.id) }}"><button type="button" class="btn btn-info">Edit</button></a></td>
-        <td><a href="{{ url_for('deleteshow',id=show.id) }}"><button type="button" class="btn btn-danger">Delete</button></a></td> -->
       </tr>
       {% endfor %}
     </tbody>
