--- a/templates/baseadmin.html
+++ b/templates/baseadmin.html
@@ -10,7 +10,7 @@
 
     <!-- <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet"> -->
 
-    <title>flasker</title>
+    <title>flasker-Admin</title>
   </head>
   <body>
     {% include 'admin_navbar.html' %}
