--- a/templates/user_history.html
+++ b/templates/user_history.html
@@ -10,17 +10,24 @@
   <table class="table">
     <thead>
       <tr>
-        <th scope="col">u_id</th>
         <th scope="col">show_id</th>
+        <th scope="col">show_name</th>
         <th scope="col">rating</th>
       </tr>
     </thead>
     <tbody>
       {% for h in history %}
-      <tr>
-        <td>{{ h.u_id }}</td>
+      <tr>  
         <td>{{ h.show_id }}</td>
-        <td>{{ h.rating }}</td>
+        <td>
+        {% for show in shows %}
+          {% if show.id == h.show_id %}
+            {{ show.name }}
+          {% endif %}
+        {% endfor %}
+        </td>
+        <td>{{ h.user_rating }}</td>
+        <td><a href="{{ url_for('rating',u_id=h.u_id,show_id=h.show_id,venue_id=h.venue_id) }}"><button type="button" class="btn btn-info">Ratings</button></a></td>
       </tr>
       {% endfor %}
     </tbody>
