--- a/templates/admin-user_bookings.html
+++ b/templates/admin-user_bookings.html
@@ -12,7 +12,9 @@
       <tr>
         <th scope="col">u_id</th>
         <th scope="col">show_id</th>
+        <th scope="col">show_name</th>
         <th scope="col">venue_id</th>
+        <th scope="col">venue_name</th>
         <th scope="col">Average Rating</th>
       </tr>
     </thead>
@@ -21,11 +23,15 @@
       <tr>
         <td>{{ show.u_id }}</td>
         <td>{{ show.show_id }}</td>
+        <td>{{ forShow[user_bookings.index(show)].name }}</td>
         <td>{{ show.venue_id }}</td>
+        <td>{{ forVenue[user_bookings.index(show)].venue_id }}</td>
         <td>{{ show.rating }}</td>
       </tr>
       {% endfor %}
     </tbody>
   </table>
- 
+ {{ forShow[0].name }}
+</br>
+{{ forVenue }}
 {% endblock %}
