--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,39 @@
-<a href="{{ url_for("adminLogin") }}">AdminLogin</a>
-</br></br>
-<a href="{{ url_for("user_login") }}">UserLogin</a>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+
+  <nav class="navbar navbar-expand-lg bg-body-dark" style='background-color: black;'>
+    <div class="container-fluid">
+      <a class="navbar-brand" href="{{ url_for('home')}}">Goodsoup</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('user_login') }}">UserLogin</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('adminLogin') }}">AdminLogin</a>
+          </li>
+          
+        </ul>
+       
+          <right>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+</br></br></br>
+
+  <figure class="text-center">
+  <blockquote class="blockquote">
+    <h1>Welcome to Goodsoup Ticket Booking Platform!</h1>
+  </blockquote>
+</figure>
+  </br></br></br>
+  <h3 style=" position: absolute;
+  bottom: 8px;
+  right: 16px;
+  font-size: 18px;"> *For Any Queries please contact <a href="mailto: goodsoupbooking@gmail.com">our support team(click here)</a> </h1>
