--- a/templates/search.html
+++ b/templates/search.html
@@ -1,11 +1,73 @@
 {% extends 'baseuser.html' %}
 {% block content %}
-</br><h3>Did you mean...{{ searched }}</h3>
-{% for venue in venues %}
-{{venue.name}}
-{% endfor %}
+<div class="card" style="width: 1000px;">
+    <div class="card-body">
+      <div class="overflow-y: scroll;"> 
+     <ul class="list-group list-group-flush">  
+ {% for venue in venues %}
+ 
+ <div class="d-flex p-2" style="width: 18rem;">
+    <div class="card-body">
+     <!-- <div class="overflow-y: scroll;"> -->
+     <!-- <ul class="list-group list-group-flush">   -->
+        <h5 class="card-title">Venue: {{ venue.name }}</h5><!-- 
+       <li class="list-group-item">Venue: {{ venue.name }}</li> -->
+       </div>
+       {% for show in venue.shows %}
+           <!-- {% if show.venue_id == venue.id %} -->
+           <div class='d-flex bg-secondary'>
+            <div class=" card" style="width: 18rem;">
+               <div class="card-body">
+             <ul class="list-group list-group-flush">
+             <li class="list-group-item">Show name: {{ show.name }}</li>
+             <li class="list-group-item">Show Timing: {{ show.show_timing }}</li>
+             <li class="list-group-item">Show Capacity: {{ show.available_seats }}</li>
+             </ul>
+             <div class="card-body">
+   <a href="{{ url_for('booking',show_id=show.id,venue_id=venue.id) }}"><button type="button" class="btn btn-info">Book Tickets</button></a>
+ </div>
 
-{% for show in shows %}
+         </div>
+     </div>
+ </div>
+           <!-- {% endif %} -->
+       {% endfor %}
+     </div>
+ 
+     
+     </ul>
+   </div>
+ </div>
+ </t></t>
+ <!-- </br></br> -->
+ {% endfor %}
+ 
+</div>
+</div>
+
+
+<div class="d-flex p-2" style="width: 18rem;">
+       {% for show in shows %}
+           <div class='d-flex bg-secondary'>
+            <div class=" card" style="width: 18rem;">
+               <div class="card-body">
+             <ul class="list-group list-group-flush">
+             <li class="list-group-item">Show name: {{ show.name }}</li>
+             <li class="list-group-item">Show Timing: {{ show.show_timing }}</li>
+             <li class="list-group-item">Show Capacity: {{ show.available_seats }}</li>
+             </ul>
+             <div class="card-body">
+             <a href="{{ url_for('booking',show_id=show.id,venue_id=show.venue_id) }}"><button type="button" class="btn btn-info">Book Tickets</button></a>
+            </div>
+            </div>
+            </div>
+            </div> 
+            
+        {% endfor %}
+    </div>
+
+
+<!-- {% for show in shows %}
     {{show.name}}</br>
-{% endfor %}
+{% endfor %} -->
 {% endblock %}
