--- a/templates/admin-user_bookings.html
+++ b/templates/admin-user_bookings.html
@@ -23,11 +23,11 @@
     <tbody>
       {% for show in user_bookings %}
       <tr style="color: gold; text-transform: uppercase;">
-        <td>{{ show.u_id }}</td>
+        <td>{{ show.u_id }}</td>  
         <td>{{ show.show_id }}</td>
         <td>{{ shows[show.show_id] }}</td>
         <td>{{ show.venue_id }}</td>
-        <td>{{venues[show.venue_id] }}</td>
+        <td>{{ venues[show.show_id] }}</td>
         <td>{{ show.user_rating }}</td>
       </tr>
       {% endfor %}
