--- a/templates/user_rating.html
+++ b/templates/user_rating.html
@@ -7,16 +7,124 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 {% endfor %}
-
+<body style="background: black">
+<!-- <div class="login-box" style="margin-top: 50px;">
 <div class="shadow p-3 mb-5 bg-body rounded">
     <form method="POST">
+        <div class="user-box">  
         {{ form.hidden_tag() }}
         {{ form.rating.label(class="form-label") }}
         {{ form.rating(class="form-control")}}
-    </br></br>
+    </br></br> -->
+    <div class="login-box" style="margin-top: 50px;">
+    <form method="POST">    
+
+      <div class="user-box">
+        {{ form.hidden_tag() }}
+  <label for="rating" class="form-label" style="margin-top: -34px">Rating</label>
+  <input type="text" name="rating" class="form-control" id="rating">
+    <div class="user-box">  
         {{ form.submit(class="btn btn-dark") }}
     </br></br>
     </form>
 </div>
+<style>
+  .login-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 400px;
+  padding: 40px;
+  transform: translate(-50%, -50%);
+  background: rgba(24, 20, 20, 0.987);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0,0,0,.6);
+  border-radius: 10px;
+}
+
+.login-box .user-box {
+  position: relative;
+}
+
+.login-box .user-box input {
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  margin-bottom: 25px;
+  border: none;
+  border-bottom: 1px solid #fff;
+  outline: none;
+  background: transparent;
+}
+
+.login-box .user-box label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  pointer-events: none;
+  transition: .5s;
+  margin-top: -36px
+}
+
+.login-box .user-box input:focus ~ label,
+.login-box .user-box input:valid ~ label {
+  top: -20px;
+  left: 0;
+  color: #bdb8b8;
+  font-size: 12px;
+}
+
+.login-box form center {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #ffffff;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: .5s;
+  margin-top: 40px;
+  letter-spacing: 4px
+}
+
+.login-box center:hover {
+  background: #03f40f;
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #03f40f,
+              0 0 25px #03f40f,
+              0 0 50px #03f40f,
+              0 0 100px #03f40f;
+}
+
+.login-box center span {
+  position: absolute;
+  display: block; 
+}
+
+@keyframes btn {
+  0% {
+    left: -100%;
+  }
+
+  50%,100% {
+    left: 100%;
+  }
+}
+
+.login-box center span:nth-child(1) {
+  bottom: 2px;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #03f40f);
+  animation: btn-anim1 2s linear infinite;
+}
+</style>
 
 {% endblock %}
