--- a/templates/search.html
+++ b/templates/search.html
@@ -49,13 +49,13 @@
 
 <div class="d-flex p-2" style="width: 18rem;">
        {% for show in shows %}
-           <div class='d-flex bg-secondary'>
-            <div class=" card" style="width: 18rem;">
-               <div class="card-body">
-             <ul class="list-group list-group-flush">
-             <li class="list-group-item">Show name: {{ show.name }}</li>
-             <li class="list-group-item">Show Timing: {{ show.show_timing }}</li>
-             <li class="list-group-item">Show Capacity: {{ show.available_seats }}</li>
+           <div class='d-flex bg-secondary' style="background: black;">
+            <div class=" card" style="width: 18rem;background: black;">
+               <div class="card-body" style="background: black;">
+              <ul class="list-group list-group-flush" >
+             <li class="list-group-item" style="color: gold; background: black;">Show name: {{ show.name }}</li>
+             <li class="list-group-item" style="color: gold; background: black;">Show Timing: {{ show.show_timing }}</li>
+             <li class="list-group-item" style="color: gold;background: black;">Show Capacity: {{ show.available_seats }}</li>
              </ul>
              <div class="card-body">
              <a href="{{ url_for('booking',show_id=show.id,venue_id=show.venue_id) }}"><button type="button" class="btn btn-info">Book Tickets</button></a>
@@ -63,21 +63,23 @@
             </div>
             </div>
             </div> 
+
+            
             
         {% endfor %}
 </div>
 
 <div class="d-flex p-2" style="width: 18rem;">
   {% for show in tags %}
-      <div class='d-flex bg-secondary'>
-       <div class=" card" style="width: 18rem;">
-          <div class="card-body">
-        <ul class="list-group list-group-flush">
-        <li class="list-group-item">Show name: {{ show.name }}</li>
-        <li class="list-group-item">Show Timing: {{ show.show_timing }}</li>
-        <li class="list-group-item">Show Capacity: {{ show.available_seats }}</li>
-        </ul>
-        <div class="card-body">
+      <div class='d-flex bg-secondary' style="background: black;">
+            <div class=" card" style="width: 18rem;background: black;">
+               <div class="card-body" style="background: black;">
+              <ul class="list-group list-group-flush" >
+             <li class="list-group-item" style="color: gold; background: black;">Show name: {{ show.name }}</li>
+             <li class="list-group-item" style="color: gold; background: black;">Show Timing: {{ show.show_timing }}</li>
+             <li class="list-group-item" style="color: gold;background: black;">Show Capacity: {{ show.available_seats }}</li>
+             </ul>
+             <div class="card-body">
         <a href="{{ url_for('booking',show_id=show.id,venue_id=show.venue_id) }}"><button type="button" class="btn btn-info">Book Tickets</button></a>
        </div>
        </div>
@@ -89,15 +91,15 @@
 
 <div class="d-flex p-2" style="width: 18rem;">
   {% for show in rating %}
-      <div class='d-flex bg-secondary'>
-       <div class=" card" style="width: 18rem;">
-          <div class="card-body">
-        <ul class="list-group list-group-flush">
-        <li class="list-group-item">Show name: {{ show.name }}</li>
-        <li class="list-group-item">Show Timing: {{ show.show_timing }}</li>
-        <li class="list-group-item">Show Capacity: {{ show.available_seats }}</li>
-        </ul>
-        <div class="card-body">
+      <div class='d-flex bg-secondary' style="background: black;">
+            <div class=" card" style="width: 18rem;background: black;">
+               <div class="card-body" style="background: black;">
+              <ul class="list-group list-group-flush" >
+             <li class="list-group-item" style="color: gold; background: black;">Show name: {{ show.name }}</li>
+             <li class="list-group-item" style="color: gold; background: black;">Show Timing: {{ show.show_timing }}</li>
+             <li class="list-group-item" style="color: gold;background: black;">Show Capacity: {{ show.available_seats }}</li>
+             </ul>
+             <div class="card-body">
         <a href="{{ url_for('booking',show_id=show.id,venue_id=show.venue_id) }}"><button type="button" class="btn btn-info">Book Tickets</button></a>
        </div>
        </div>
